Changed source directory from 'dist' to 'src' and added some npm scripts.

--- a/package.json
+++ b/package.json
@@ -1,10 +1,16 @@
 {
   "name": "daburu-js-npm",
-  "version": "1.0.0",
+  "version": "1.0.2",
   "description": "An npm template for Javascript.",
   "main": "dist/index.js",
   "scripts": {
-    "test": "nyc --reporter=html --reporter=text mocha"
+    "prepublish": "npm run test && npm run build",
+    "build": "npm run copy",
+    "test": "nyc --reporter=html --reporter=text mocha",
+    "clean:dist": "rm -rf dist",
+    "clean": "npm run clean:dist",
+    "copy:dist": "mkdir -p dist && cp -r src/* dist/",
+    "copy": "npm run copy:dist"
   },
   "repository": {
     "type": "git",
