--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "This is an npm template for Javascript.",
   "main": "dist/index.js",
   "scripts": {
-    "prepublish": "npm run lint && npm run test && npm version patch && npm run build",
+    "prepublish": "npm run lint && npm run test && npm run build && npm version patch",
     "build": "npm run copy",
     "test": "nyc mocha",
     "clean:dist": "rm -rf dist",
