--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -8,7 +8,7 @@
         "sourceType": "module"
     },
     "rules": {
-        "indent": [ "error", 4 ],
+        "indent": [ "error", "tab" ],
         "linebreak-style": [
             "error",
             "unix"
