--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "daburu-js-npm",
-  "version": "1.0.8",
+  "version": "1.0.9",
   "description": "This is an npm template for Javascript.",
   "main": "dist/index.js",
   "scripts": {
-    "prepublish": "npm run lint && npm run test && npm run build && npm version patch",
+    "prepublish": "npm run lint && npm run test && npm run build",
     "build": "npm run copy",
     "test": "nyc mocha",
     "clean:dist": "rm -rf dist",
